--- a/style.css
+++ b/style.css
@@ -52,3 +52,13 @@ img {
     /* text-align: center; */
     margin:auto
 }
+
+
+a {
+     position: relative;
+    bottom: 27px;
+}
+
+#buttonsection {
+    height: 130px;
+}
